--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-PORT=3000
-MONGO_URI=mongodb+srv://odev40829:tNLDdLTUnyVLon5t@cluster0.iuyxdwo.mongodb.net/books_db?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET=qn7UFwTWGTa5sVwgsIn0FhOkKl3IM1thZfqpFCkiVJI=
-CLOUDINARY_CLOUD_NAME=drpvppfw2
-CLOUDINARY_API_KEY=532126257145969
-CLOUDINARY_API_SECRET=XRtLZcuzCMuxbzowyXLDSWIeW5Q
+PORT="Your port number"
+MONGO_URI="Your MongoDB URI"
+JWT_SECRET="Your JWT secret"
+CLOUDINARY_CLOUD_NAME="Your Cloudinary cloud name"
+CLOUDINARY_API_KEY="Your Cloudinary API key"
+CLOUDINARY_API_SECRET="Your Cloudinary API secret"
